# ci_demo_sp26

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: test.yml
src/: add.py  hello.py
tests/: test_add.py
