[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "muchovej",email = "stephen.muchovej@gmail.com"}
]
readme = "README.md"
requires-python = "~3.13"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.14.13,<0.15.0)"
]
training = [
    "scikit-learn (>=1.8.0,<2.0.0)"
]
